# python-project-50

./: Makefile  README.md  pyproject.toml
hexlet_code/: __init__.py  cli.py
hexlet_code/scripts/: gendiff.py
