[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Compares two configuration files and shows a difference."
authors = ["Sergei Pishchulenok"]
readme = "README.md"
repository = "https://github.com/sirejja/python-project-50"
classifiers = [
    "Topic :: Games/Entertainment"
]
packages = [
    { include = "hexlet_code" },
]

[tool.poetry.scripts]
gendiff = "hexlet_code.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
